--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
+        <h1>Aca va el header</h1>
+    </header>
     <h1 class="primerClase">Hola mundo</h1>
     <h2>HOla denuevo</h2>
 </body>
