--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1>Aca va el header</h1>
+        <h1>Tomas Lagomarsino Header</h1>
     </header>
     <h1 class="primerClase">Hola mundo</h1>
     <h2>HOla denuevo</h2>
