agregado de section

--- a/index.html
+++ b/index.html
@@ -9,9 +9,16 @@
 </head>
 <body>
     <header>
-        <h1>Tomas Lagomarsino Header</h1>
+        <h1>este es el error de newheader</h1>
     </header>
     <h1 class="primerClase">Hola mundo</h1>
     <h2>HOla denuevo</h2>
+
+    <section>
+        <ul>
+            <li>Items 1</li>
+            <li>Items 2</li>
+        </ul>
+    </section>
 </body>
 </html>
