agregado de estilo y js

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
         <h1>Aca va el header desde develop</h1>
     </header>
     <h1 class="primerClase">Hola mundo</h1>
-    <h2>HOla denuevo</h2>
+    <h2>HOla denuevo dkfmsdkf
+        
+    </h2>
 
     <section>
         <ul>
