--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@
 <body>
     <header>
         <h1>Aca va el header desde develop</h1>
+        <h3>Aca hay un segundo titulo debajo del primero</h3>
     </header>
     <h1 class="primerClase">Hola mundo</h1>
-    <h2>HOla denuevo dkfmsdkf
-        
-    </h2>
+    <h2>HOla denuevo dkfmsdkf</h2>
 
     <section>
         <ul>
